--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,6 @@
     limitations under the License.
 
 -->
-<!--
-
-    D:\project\dian1-http/LICENSE.txt
-
--->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -55,6 +50,8 @@
         <maven-javadoc.version>3.0.0</maven-javadoc.version>
         <maven-compiler.version>3.1</maven-compiler.version>
         <maven-source.version>3.2.1</maven-source.version>
+        <license-maven.version>4.2.rc3</license-maven.version>
+        <checksum-maven.version>1.3</checksum-maven.version>
     </properties>
 
     <dependencyManagement>
@@ -130,16 +127,19 @@
                     <artifactId>flatten-maven-plugin</artifactId>
                     <version>${flatten-maven.version}</version>
                 </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>${maven-javadoc.version}</version>
                 </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler.version}</version>
                 </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
@@ -150,6 +150,17 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring-boot.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>com.mycila</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <version>${license-maven.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>net.ju-n.maven.plugins</groupId>
+                    <artifactId>checksum-maven-plugin</artifactId>
+                    <version>${checksum-maven.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -165,6 +176,7 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -180,6 +192,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -196,7 +209,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
-                <version>${flatten-maven.version}</version>
                 <configuration>
                     <updatePomFile>true</updatePomFile>
                     <flattenMode>resolveCiFriendliesOnly</flattenMode>
@@ -224,7 +236,6 @@
             <plugin>
                 <groupId>net.ju-n.maven.plugins</groupId>
                 <artifactId>checksum-maven-plugin</artifactId>
-                <version>1.3</version>
                 <executions>
                     <execution>
                         <id>checksum-maven-plugin-files</id>
@@ -253,7 +264,7 @@
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>4.2.rc3</version>
+                <version>${license-maven.version}</version>
                 <configuration>
                     <inlineHeader>
                         Copyright ${year} the original author or authors.
@@ -284,6 +295,7 @@
                      </mapping>-->
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
