--- a/http-spring-boot-example/pom.xml
+++ b/http-spring-boot-example/pom.xml
@@ -20,7 +20,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.dian1</groupId>
+        <groupId>io.github.poo0054</groupId>
         <artifactId>dian1-http</artifactId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
@@ -37,7 +37,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.dian1</groupId>
+            <groupId>io.github.poo0054</groupId>
             <artifactId>http-spring-boot-starter</artifactId>
         </dependency>
 
