--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>sonatype</id>
             <build>
                 <plugins>
                     <!-- Gpg Signature -->
